--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,7 @@ a {
 .btn {
   @apply text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red-800 shadow-lg font-medium rounded-lg text-sm px-5 py-2.5 text-center;
 }
+
+.px-default {
+  @apply px-4 sm:px-6 lg:px-8;
+}
